<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="2dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="88dp"
            android:layout_height="100dp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black"
            android:contentDescription="@string/foto_de_perfil"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teacher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="1dp"
                android:textStyle="bold"
                android:layout_marginStart="2dp"
                android:text="@string/Mock_Test_Name"
            />
            <TextView

                android:id="@+id/teacher_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textSize="16sp"
                android:layout_marginStart="2dp"
                android:text="@string/Mock_Test_Email"
                />
            <TextView

                android:id="@+id/teacher_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textSize="16sp"
                android:layout_marginStart="2dp"
                android:text="@string/Mock_Test_Level"
                />
            <TextView
                android:id="@+id/teacher_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textSize="16sp"
                android:layout_marginStart="2dp"
                android:text="@string/Mock_Test_Location"
                />

        </LinearLayout>

    </LinearLayout>




</androidx.cardview.widget.CardView>